fix(styles): updates - remove hardcoded text color property - fixes for image component mask - add new spacing values to tailwind config

--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -22,7 +22,6 @@ $light-red: #f66;
     font-weight: normal;
     text-overflow: ellipsis;
     scrollbar-width: thin;
-    color: $text;
     font-family:
         Inter,
         -apple-system,
